syntax = "proto3";

option go_package = "./user_service";

service UserService {
    rpc Ping(PingRequest) returns (PongResponse);
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
	rpc GetUserID(GetUserIDRequest) returns (GetUserIDResponse);
}

message PingRequest {
    string message = 1;
}

message PongResponse {
    string message = 1;
}

message CreateUserRequest {
	string email = 1;
}

message CreateUserResponse {
	int32 userId = 1;
}

message GetUserIDRequest {
	string email = 1;
}

message GetUserIDResponse {
	int32 userId = 1;
}